# drivingforward_gsplat

./: .gitignore  AGENTS.md  README.md  pyproject.toml
config/prompts/: sunset.yaml
configs/: clip_guidance.yaml  optimize_gaussian.yaml  predict_gaussian.yaml  sdxl_i2i.yaml  sdxl_panorama_i2i.yaml
configs/nuscenes/: main.yaml
configs/prompts/: sunset.yaml
src/drivingforward_gsplat/: __init__.py  dataset.py  drivingforward_gsplat.py  predict_gaussian.py  torchscript_infer.py
src/drivingforward_gsplat/clip_guidance/: __init__.py
src/drivingforward_gsplat/clip_guidance/loss/: __init__.py  clip_loss.py  edge_loss.py  musiq_loss.py  sh_reg_loss.py
src/drivingforward_gsplat/depth/: depth.py
src/drivingforward_gsplat/i2i/: controlnet.py  flux_i2i.py  instruct_pix2pix.py  prompt_config.py  sdxl_i2i.py  sdxl_i2i_config.py  sdxl_panorama_i2i.py  sdxl_panorama_i2i_config.py
src/drivingforward_gsplat/mask/: sam3_mask.py
src/drivingforward_gsplat/models/: __init__.py  base_model.py  drivingforward_model.py
src/drivingforward_gsplat/models/gaussian/: __init__.py  extractor.py  gaussian_network.py  rendering.py  utils.py
src/drivingforward_gsplat/models/geometry/: __init__.py  geometry_util.py  pose.py  view_rendering.py
src/drivingforward_gsplat/models/losses/: __init__.py  base_loss.py  loss_util.py  multi_cam_loss.py  single_cam_loss.py
src/drivingforward_gsplat/network/: __init__.py  blocks.py  depth_network.py  pose_network.py  volumetric_fusionnet.py
src/drivingforward_gsplat/optimize_gaussian/: __init__.py  dataclass.py  freeze.py  losses.py  optimize_gaussian.py  strategy.py  train.py
src/drivingforward_gsplat/panorama/: panorama.py
src/drivingforward_gsplat/trainer/: __init__.py  clip_guidance_trainer.py  trainer.py
src/drivingforward_gsplat/utils/: __init__.py  gaussian_ply.py  gaussian_viewer.py  logger.py  misc.py  rotations.py  visualize.py
