[project]
name = "drivingforward-gsplat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Masaya Kataoka", email = "ms.kataoka@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "gsplat==1.5.3",
    "huggingface-hub>=1.2.3",
    "nuscenes-devkit>=1.2.0",
    "python-dotenv>=1.0.1",
    "torch==2.4.0+cu124; sys_platform == 'linux'",
    "torch==2.4.0; sys_platform == 'darwin'",
    "torchvision==0.19.0+cu124; sys_platform == 'linux'",
    "torchvision==0.19.0; sys_platform == 'darwin'",
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
