[project]
name = "drivingforward-gsplat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Masaya Kataoka", email = "ms.kataoka@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "diffusers>=0.36.0",
    "dotenv>=0.9.9",
    "e3nn>=0.5.9",
    "einops>=0.8.1",
    "gsplat==1.5.3",
    "hf>=1.2.3",
    "huggingface-hub>=1.2.3",
    "lpips>=0.1.4",
    "nuscenes-devkit>=1.2.0",
    "pillow>=12.0.0",
    "python-dotenv>=1.0.1",
    "safetensors>=0.7.0",
    "scikit-image>=0.26.0",
    "tensorboardx>=2.6.4",
    "tokenizers>=0.15.0",
    "torch==2.4.0+cu124; sys_platform == 'linux'",
    "torch==2.4.0; sys_platform == 'darwin'",
    "torchvision==0.19.0+cu124; sys_platform == 'linux'",
    "torchvision==0.19.0; sys_platform == 'darwin'",
    "flash-attn==v2.7.4.post1; sys_platform == 'linux'",
    "transformers>=4.38.0",
    "xformers>=0.0.27.post2",
    "depth-anything-3",
    "plyfile>=1.1.3",
    "docker>=7.1.0",
]

[project.scripts]
drivingforward-gsplat = "drivingforward_gsplat.drivingforward_gsplat:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
depth-anything-3 = { git = "https://github.com/ByteDance-Seed/Depth-Anything-3.git" }

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]

[tool.uv.extra-build-variables]
flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE" }

